--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,11 +16,16 @@ code {
 .flex-container {
   display: flex;
   flex-wrap: nowrap;
-  justify-content:space-between;
+  height:100vh;
 }
 
 .flex-item{
-  width:50%;
+  flex: 1;
+}
+.flex-item.right{
+  flex: 1;
+  display:flex;
+  height: 100%;
 }
 
 .submit{
@@ -53,6 +58,20 @@ code {
   color:white;
 }
 
+button.submit.disabled{
+  filter: brightness(50%);
+  cursor: wait;
+  background-color: yellow;
+  color:black;
+}
+button.submit.disabled:hover{
+  filter: brightness(50%);
+  background-color: yellow;
+  color:black;
+  cursor: wait;
+  animation: none;
+}
+
 #description{
   border: 5px solid orange;
   background-color: black;
@@ -73,4 +92,21 @@ code {
 .diff-hard{
   color:red;
   border: 1px solid red;
+}
+
+.editor{
+  flex: 2;
+  border: 3px greenyellow solid;
+  overflow: hidden;
+}
+
+.response-display{
+  flex: 1;
+  border: 3px solid purple;
+  overflow: auto;
+}
+.editor-container{
+  flex: 1;
+  display:flex;
+  flex-direction: column;
 }
