--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,21 +2,63 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont,'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.App{
+  height:100vh;
+}
+.pages{
+  height:96.5%;
+}
+:root {
+  --primary: #1aac83;
+  --error: #e7195a;
+  --gold: #FFD100;
+  --dark-mode: #0D0D0D;
+  --zoom: 1.04;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header {
+  background: var(--dark-mode);
+  padding:0px;
+  height: 3.5%;
+}
+header .navbar {
+  max-width: 1400px;
+  margin: 0 auto;
+  display: flex;
+  padding: 2px 4px;
+  margin-left:5px;
+  margin-right:5px;
+  /* justify-content: space-between; */
+}
+
+.company-name{
+  color: var(--gold);
+  margin:0px;
+  height:100%;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.company-logo{
+  width: 25px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .flex-container {
   display: flex;
   flex-wrap: nowrap;
-  height:100vh;
+  height:100%;
 }
 
 .flex-item{
@@ -30,18 +72,18 @@ code {
 
 .submit{
   position: absolute;
-  right: 3vw;
-  bottom: 5vh;
+  bottom:1%;
+  right:2%;
   padding: 10px;
   background-color: transparent;
-  border: 2px solid yellow;
+  border: 2px solid var(--gold);
   border-radius: 5px;
-  color: yellow;
+  color: var(--gold);
   font-family: "Poppins";
 }
 
 .submit:hover{
-  background-color: yellow;
+  background-color: var(--gold);
   color:black;
   animation: grow 1s forwards;
   cursor:pointer;
@@ -54,28 +96,36 @@ code {
 
 .description-box{
   margin: 1em;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   color:white;
 }
 
 button.submit.disabled{
   filter: brightness(50%);
   cursor: wait;
-  background-color: yellow;
+  background-color: var(--gold);
   color:black;
 }
 button.submit.disabled:hover{
   filter: brightness(50%);
-  background-color: yellow;
+  background-color: var(--gold);
   color:black;
   cursor: wait;
   animation: none;
 }
 
 #description{
-  border: 5px solid orange;
-  background-color: black;
+  border-top: 3px solid var(--gold);
+  border-right: 3px solid var(--gold);
+  background-color: var(--dark-mode);
   color:white;
+  font-size: 14px;
+}
+.example{
+  background-color: #404040;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 14px;
 }
 
 .diff-easy{
@@ -94,19 +144,48 @@ button.submit.disabled:hover{
   border: 1px solid red;
 }
 
+.constraint-list{
+  font-size: small;
+}
+
+
 .editor{
-  flex: 2;
-  border: 3px greenyellow solid;
+  flex: 3;
+  border-top: 3px var(--gold) solid;
   overflow: hidden;
+  position:relative;
 }
 
 .response-display{
-  flex: 1;
-  border: 3px solid purple;
+  flex: 2;
+  border-top: 3px solid var(--gold);
   overflow: auto;
+  background-color: var(--dark-mode);
+  color:white;
+  padding: 10px;
 }
+.output-label{
+  margin:0px;
+  font-size: small;
+}
+.response-output{
+  background-color: #404040;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 5px;
+}
+.compiler-error-output{
+  padding: 10px;
+  border-radius: 5px;
+  margin: 5px;
+  background-color: rgba(255, 0, 0,0.1);
+  color:rgb(255, 51, 0);
+  font-size: 14px;
+}
+
 .editor-container{
   flex: 1;
   display:flex;
   flex-direction: column;
 }
+
