added rudimentary socket comm + waiting room

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,6 +54,22 @@ header .navbar {
   margin-left: 5px;
   margin-right: 5px;
 }
+/* Form CSS*/
+div.error {
+  padding: 10px;
+  background: #ffefef;
+  border: 1px solid var(--error);
+  color: var(--error);
+  border-radius: 4px;
+  margin: 20px 0;
+}
+input.error{
+  border: 1px solid var(--error);
+}
+
+
+
+
 
 .flex-container {
   display: flex;
@@ -137,12 +153,10 @@ button.submit.disabled:hover{
 
 .diff-medium{
   color:yellow;
-  border: 1px solid yellow;
 }
 
 .diff-hard{
   color:red;
-  border: 1px solid red;
 }
 
 .constraint-list{
