--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,7 @@ body {
   height:100vh;
 }
 .pages{
+  background-color: var(--dark-mode);
   height:96.5%;
 }
 :root {
@@ -56,19 +57,172 @@ header .navbar {
 }
 /* Form CSS*/
 div.error {
-  padding: 10px;
-  background: #ffefef;
-  border: 1px solid var(--error);
-  color: var(--error);
-  border-radius: 4px;
-  margin: 20px 0;
+  border: 1px solid var(--error) !important;
+  color: var(--error) !important;
 }
 input.error{
-  border: 1px solid var(--error);
+  border: 1px solid var(--error) !important;
+}
+.error-msg{
+  color: var(--error) !important;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  background:transparent;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:#888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+.landing-page{
+  background-color: var(--dark-mode);
+  color:white;
+  font-family: "Poppins";
+  height:96.5vh;
+}
+#welcome-message{
+  color:var(--gold);
+  margin:0px;
+  text-align: center;
+  font-size: xx-large;
+  margin-bottom: 20px;
+}
+.learn-more{
+  color: var(--gold);
+  position:absolute;
+  bottom: 5%;
+  margin:auto;
+  text-align: center;
+  left: 0;
+  right: 0;
+  margin: auto
+}
+.learn-more > p{
+  margin:0px;
+}
+
+@keyframes grow {
+  0% {transform: scale(1);}
+  100% {transform: scale(2);}
+}
+
+.learn-more > img{
+  position: relative;
+  animation-name: grow;
+  animation-duration: 3s;
+  animation-iteration-count: 10;
+  animation-direction: alternate;  
+}
+.entrance-forms{
+  display:flex;
+  justify-content: space-around;
+  width:80%;
+  margin:auto;
+  /* border:2px solid red; */
+}
+.room-form{
+  width:35%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.diff-select{
+  display:flex;
+}
+.diff-select > label{
+  flex:1;
+}
+.diff-checkbox-easy{
+  accent-color: #30cf30;
+  border:0px;
+}
+.diff-checkbox-medium{
+  accent-color: yellow;
+  border:0px;
+}
+.diff-checkbox-hard{
+  accent-color: #ff4747;
+  border:0px;
+}
+.player-select > select{
+  background-color: transparent;
+  border: 0px;
+  height:100%;
+  width:100%;
+  font-family: 'Poppins';
+  cursor: pointer;
+  color:white;
+  padding:0px;
+}
+.player-select > select:focus{
+  outline:none;
+}
+.room-input > input{
+  background-color: transparent;
+  border: 0px;
+  height:100%;
+  width:100%;
+  font-family: 'Poppins';
+  cursor: pointer;
+  color:white;
+  padding:0px;
+}
+.room-input > input:focus{
+  outline:none;
+}
+
+button.room-item{
+  background-color: var(--gold);
+  border: 1px solid var(--gold);
+  width:102%;
+  font-family: 'Poppins';
+  cursor: pointer;
+  color:var(--dark-mode);
+  padding:10px;
+  outline:none;
+}
+
+button.room-item:hover{
+  animation: in 0.5s forwards;
+}
+
+@keyframes in {
+  0% {transform: scale(1);}
+  100% {transform: scale(var(--zoom));}
+}
+
+.room-item{
+  width:100%;
+  border:1px solid var(--gold);
+  margin:8px;
+  padding:5px;
+  font-size: large;
 }
 
 
-
+.info{
+  background-color: var(--dark-mode);
+  height: 100vh;
+  margin:0px;
+}
+.info > p{
+  margin:0px;
+}
 
 
 .flex-container {
@@ -77,9 +231,6 @@ input.error{
   height:100%;
 }
 
-.flex-item{
-  flex: 1;
-}
 .flex-item.right{
   flex: 1;
   display:flex;
@@ -111,11 +262,24 @@ input.error{
 }
 
 .description-box{
-  margin: 1em;
+  padding: 0em 1em;
   /* border: 1px solid red; */
   color:white;
+  font-size: 16px;
+  flex: 3;
+  overflow: auto;
+  background-color: var(--dark-mode);
 }
-
+.arcade{
+  flex: 2;
+  /* border: 3px solid green; */
+  border-top: 3px solid var(--gold);
+  overflow: auto;
+  background-color: var(--dark-mode);
+  color:white;
+  padding: 10px;
+  display:flex;
+}
 button.submit.disabled{
   filter: brightness(50%);
   cursor: wait;
@@ -130,12 +294,12 @@ button.submit.disabled:hover{
   animation: none;
 }
 
-#description{
+.flex-item.left{
   border-top: 3px solid var(--gold);
   border-right: 3px solid var(--gold);
-  background-color: var(--dark-mode);
-  color:white;
-  font-size: 14px;
+  flex: 1;
+  display:flex;
+  flex-direction: column;
 }
 .example{
   background-color: #404040;
@@ -147,7 +311,6 @@ button.submit.disabled:hover{
 
 .diff-easy{
   color:#75f542;
-  /* border: 1px solid green; */
 }
 
 
@@ -167,7 +330,7 @@ button.submit.disabled:hover{
 .editor{
   flex: 3;
   border-top: 3px var(--gold) solid;
-  overflow: hidden;
+  overflow-y: auto;
   position:relative;
 }
 
@@ -208,5 +371,326 @@ button.submit.disabled:hover{
   flex: 1;
   display:flex;
   flex-direction: column;
+}
+.leaderboard{
+  display:flex;
+  flex-direction: column;
+}
+.leaderboard-container{
+  height:100%;
+  flex:1;
+}
+
+
+.leaderboard-box{
+  display: flex;
+  background-color: var(--dark-mode);
+  /* border-radius: 0px 25px 25px 0px; */
+  border: 3px solid var(--gold);
+  margin: 5px 0px;
+}
+.leaderboard-box > .ranking{
+  color:var(--dark-mode);
+  background-color: var(--gold);
+  flex: 1;
+  padding:10px 0px;
+  margin:0px;
+  text-align: center;
+  /* border-radius: 0px 25px 25px 0px; */
+  font-size: 20px;
+  font-weight: 700;
+}
+.leaderboard-box > .username{
+  /* background-color: #f1f1f1; */
+  color:white;
+  flex:5;
+  margin:10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 300;
+}
+.leaderboard-box > .score{
+  color:var(--dark-mode);
+  background-color: var(--gold);
+  border-radius: 20px;
+  flex:2;
+  margin:10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.message-board-container{
+  flex:2;
+}
+.clock{
+  position: absolute;
+  top:0%;
+  right:2%;
+  color:var(--gold);
+  font-size: x-large;
+  font-weight: 700;
+}
+.waiting-room-container{
+  font-family: 'Poppins';
+  color:white;
+  height: 100%;
+}
+.user-table{
+  font-family: 'Poppins';
+  border: 1px solid var(--gold);
+  width: 20%;
+  position:absolute;
+  top:5%;
+  left:5%;
+  border-collapse: collapse;
+}
+
+#user-table-header{
+  font-size: xx-large;
+  border-bottom: 1px solid var(--gold);
+  text-align: left;
+  color:var(--gold);
+}
+
+.user-table td{
+  font-size: large;
+  border-bottom: 1px solid var(--gold);
+  text-align: left;
+  padding:10px;
+  height:10px;
+}
+
+.waiting-status{
+  position:absolute;
+  text-align: center;
+  left:35%;
+  /* right:0; */
+  top:10%;
+  width:40%;
+  /* margin: auto; */
+}
+.waiting{
+  color:var(--gold);
+  font-size: 3em;
+}
+.room-name-container{
+  display: flex;
+  justify-content: space-between;
+  border:2px solid white;
+}
+.room-name-container > button{
+  border:0px;
+  background-color: white;
+  color:var(--dark-mode);
+  font-size: 1em;
+  padding:5px;
+  font-family: 'Poppins';
+}
+.room-name-container > button:hover{
+  background-color: #d4d4d4;
+  cursor:pointer;
+}
+.room-name{
+  /* border:2px solid white; */
+  color:white;
+  font-size: 2em;
+  margin:0px;
+  padding:5px;
+}
+
+.countdown{
+  color:var(--gold);
+  font-size: 3em;
+  position:absolute;
+  text-align: center;
+  left:0;
+  right:0;
+  margin:auto;
+}
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 10px solid var(--gold); /* Light grey */
+  border-top: 10px solid #383636; /* Black */
+  border-radius: 50%;
+  position:relative;
+  left:0;
+  right:0;
+  top:35%;
+  margin:auto;
+  animation: spinner 1.5s linear infinite;
+}
+.leaderboard-finish-container{
+  position:relative;
+  top:10%;
+  display:flex;
+}
+.leaderboard-finish{
+  /* position:absolute;
+  width:33%;
+  left:5%;
+  top:5%; */
+  flex:2;
+  margin:0% 5%;
+  /* right:0;
+  margin:auto; */
+}
+.finish-message{
+  color:var(--gold);
+  font-size: small;
+  text-align: center;
+  margin: 10px 0px;
+  /* position:absolute;
+  right:33%;
+  top:33%; */ 
+  flex:3;
+  margin:0% 5%;
+  animation: increase 5s forwards;
+}
+@keyframes increase {
+  100% {font-size: 4em;}
+}
+.finish-container{
+  overflow: hidden;
+  position:relative;
+  height:100%;
+}
+
+/*Fireworks*/
+@keyframes firework {
+  0% { transform: translate(var(--x), var(--initialY)); width: var(--initialSize); opacity: 1; }
+  50% { width: 0.5vmin; opacity: 1; }
+  100% { width: var(--finalSize); opacity: 0; }
+}
+
+
+.firework,
+.firework::before,
+.firework::after
+{
+  --initialSize: 0.5vmin;
+  --finalSize: 45vmin;
+  --particleSize: 0.2vmin;
+  --color1: #ffd100;
+  --color2: khaki;
+  --color3: white;
+  --color4: #ffd100;
+  --color5: gold;
+  --color6: #ffd100;
+  --y: -30vmin;
+  --x: -50%;
+  --initialY:60vmin;
+  content: "";
+  animation: firework 2s infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, var(--y));
+  width: var(--initialSize);
+  aspect-ratio: 1;
+  background: 
+    /*
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 0%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 0%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 100%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 100%,
+    */
+    
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 50% 0%,
+    radial-gradient(circle, var(--color2) var(--particleSize), #0000 0) 100% 50%,
+    radial-gradient(circle, var(--color3) var(--particleSize), #0000 0) 50% 100%,
+    radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 0% 50%,
+    
+    /* bottom right */
+    radial-gradient(circle, var(--color5) var(--particleSize), #0000 0) 80% 90%,
+    radial-gradient(circle, var(--color6) var(--particleSize), #0000 0) 95% 90%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 90% 70%,
+    radial-gradient(circle, var(--color2) var(--particleSize), #0000 0) 100% 60%,
+    radial-gradient(circle, var(--color3) var(--particleSize), #0000 0) 55% 80%,
+    radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 70% 77%,
+    
+    /* bottom left */
+    radial-gradient(circle, var(--color5) var(--particleSize), #0000 0) 22% 90%,
+    radial-gradient(circle, var(--color6) var(--particleSize), #0000 0) 45% 90%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 33% 70%,
+    radial-gradient(circle, var(--color2) var(--particleSize), #0000 0) 10% 60%,
+    radial-gradient(circle, var(--color3) var(--particleSize), #0000 0) 31% 80%,
+    radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 28% 77%,
+    radial-gradient(circle, var(--color5) var(--particleSize), #0000 0) 13% 72%,
+    
+    /* top left */
+    radial-gradient(circle, var(--color6) var(--particleSize), #0000 0) 80% 10%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 95% 14%,
+    radial-gradient(circle, var(--color2) var(--particleSize), #0000 0) 90% 23%,
+    radial-gradient(circle, var(--color3) var(--particleSize), #0000 0) 100% 43%,
+    radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 85% 27%,
+    radial-gradient(circle, var(--color5) var(--particleSize), #0000 0) 77% 37%,
+    radial-gradient(circle, var(--color6) var(--particleSize), #0000 0) 60% 7%,
+    
+    /* top right */
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 22% 14%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 45% 20%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 33% 34%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 10% 29%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 31% 37%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 28% 7%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 13% 42%
+    ;
+  background-size: var(--initialSize) var(--initialSize);
+  background-repeat: no-repeat;
+}
+
+.firework::before {
+  --x: -50%;
+  --y: -50%;
+  --initialY: -50%;
+/*   transform: translate(-20vmin, -2vmin) rotate(40deg) scale(1.3) rotateY(40deg); */
+  transform: translate(-50%, -50%) rotate(40deg) scale(1.3) rotateY(40deg);
+/*   animation: fireworkPseudo 2s infinite; */
+}
+
+.firework::after {
+  --x: -50%;
+  --y: -50%;
+  --initialY: -50%;
+/*   transform: translate(44vmin, -50%) rotate(170deg) scale(1.15) rotateY(-30deg); */
+  transform: translate(-50%, -50%) rotate(170deg) scale(1.15) rotateY(-30deg);
+/*   animation: fireworkPseudo 2s infinite; */
+}
+
+.firework:nth-child(2) {
+  --x: 30vmin;
+}
+
+.firework:nth-child(2),
+.firework:nth-child(2)::before,
+.firework:nth-child(2)::after {
+  --finalSize: 40vmin;
+  left: 30%;
+  top: 60%;
+  animation-delay: -0.25s;
+}
+
+.firework:nth-child(3) {
+  --x: -30vmin;
+  --y: -50vmin;
+}
+
+.firework:nth-child(3),
+.firework:nth-child(3)::before,
+.firework:nth-child(3)::after {
+  --finalSize: 35vmin;
+  left: 70%;
+  top: 60%;
+  animation-delay: -0.4s;
 }
 
