--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#root{
+  background-color: var(--dark-mode);
+  color:white;
+}
 .App{
   height:100vh;
 }
@@ -16,6 +20,8 @@ body {
   height:96.5%;
 }
 :root {
+  --Bomb: #c91051;
+  --Freeze: #46b3fe;
   --primary: #1aac83;
   --error: #e7195a;
   --gold: #FFD100;
@@ -65,8 +71,13 @@ input.error{
 }
 .error-msg{
   color: var(--error) !important;
+  text-align: center;
 }
-
+.powerup-error-msg{
+  color: var(--error) !important;
+  text-align: center;
+  margin:0px;
+}
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -102,13 +113,14 @@ input.error{
 }
 .learn-more{
   color: var(--gold);
+  border-bottom: 1px solid var(--gold);
   position:absolute;
   bottom: 5%;
   margin:auto;
   text-align: center;
   left: 0;
   right: 0;
-  margin: auto
+  width:fit-content;
 }
 .learn-more > p{
   margin:0px;
@@ -224,6 +236,10 @@ button.room-item:hover{
   margin:0px;
 }
 
+.loading-background-element{
+  display: none;
+}
+
 
 .flex-container {
   display: flex;
@@ -270,8 +286,15 @@ button.room-item:hover{
   overflow: auto;
   background-color: var(--dark-mode);
 }
+.freeze-arcade{
+  border-top: 3px solid var(--Freeze) !important;
+}
+.bomb-arcade{
+  border-top: 3px solid var(--Bomb) !important;
+}
+
 .arcade{
-  flex: 2;
+  flex: 1;
   /* border: 3px solid green; */
   border-top: 3px solid var(--gold);
   overflow: auto;
@@ -279,7 +302,41 @@ button.room-item:hover{
   color:white;
   padding: 10px;
   display:flex;
+  overflow: hidden;
 }
+
+.notification{
+  position: absolute;
+  font-family: 'Poppins';
+  border:1px solid var(--gold);
+  background-color: var(--dark-mode);
+  padding:5px;
+  z-index: 1;
+  right:0px;
+  top:5%;
+}
+
+.Bomb{
+  border:1px solid var(--Bomb);
+}
+
+.Freeze{
+  border:1px solid var(--Freeze);
+}
+
+.powerup-icon-container{
+  padding:5px;
+}
+
+.unselectable {
+  user-drag: none; 
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
 button.submit.disabled{
   filter: brightness(50%);
   cursor: wait;
@@ -293,10 +350,17 @@ button.submit.disabled:hover{
   cursor: wait;
   animation: none;
 }
-
+.freeze-desc{
+  border-top: 3px solid var(--Freeze) !important;
+  border-right: 3px var(--Freeze) solid !important;
+}
+.bomb-desc{
+  border-top: 3px solid var(--Bomb) !important;
+  border-right: 3px var(--Bomb) solid !important;
+}
 .flex-item.left{
   border-top: 3px solid var(--gold);
-  border-right: 3px solid var(--gold);
+  border-right: 3px var(--gold) solid;
   flex: 1;
   display:flex;
   flex-direction: column;
@@ -326,12 +390,25 @@ button.submit.disabled:hover{
   font-size: small;
 }
 
+.bomb-editor{
+  border-top: 3px var(--Bomb) solid !important;
+}
+
+.freeze-editor{
+  border-top: 3px var(--Freeze) solid !important;
+}
 
 .editor{
   flex: 3;
   border-top: 3px var(--gold) solid;
   overflow-y: auto;
   position:relative;
+}
+.freeze-response-display{
+  border-top: 3px solid var(--Freeze) !important;
+}
+.bomb-response-display{
+  border-top: 3px solid var(--Freeze) !important;
 }
 
 .response-display{
@@ -380,7 +457,15 @@ button.submit.disabled:hover{
   height:100%;
   flex:1;
 }
-
+.error-leaderboard-box{
+  border: 3px solid var(--error) !important;
+}
+.freeze-leaderboard-box{
+  border: 3px solid var(--Freeze) !important;
+}
+.bomb-leaderboard-box{
+  border: 3px solid var(--Bomb) !important;
+}
 
 .leaderboard-box{
   display: flex;
@@ -389,6 +474,18 @@ button.submit.disabled:hover{
   border: 3px solid var(--gold);
   margin: 5px 0px;
 }
+
+.leaderboard-box > .error-ranking{
+  background-color: var(--error) !important;
+}
+
+.leaderboard-box > .freeze-ranking{
+  background-color: var(--Freeze) !important;
+}
+.leaderboard-box > .bomb-ranking{
+  background-color: var(--Bomb) !important;
+}
+
 .leaderboard-box > .ranking{
   color:var(--dark-mode);
   background-color: var(--gold);
@@ -407,7 +504,16 @@ button.submit.disabled:hover{
   margin:10px;
   text-align: center;
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 500;
+}
+.leaderboard-box > .error-score{
+  background-color: var(--error) !important;
+}
+.leaderboard-box > .freeze-score{
+  background-color: var(--Freeze) !important;
+}
+.leaderboard-box > .bomb-score{
+  background-color: var(--Bomb) !important;
 }
 .leaderboard-box > .score{
   color:var(--dark-mode);
@@ -423,6 +529,66 @@ button.submit.disabled:hover{
 .message-board-container{
   flex:2;
 }
+.powerup-interface-container{
+  flex:2;
+}
+.powerup-grid-container{
+  display:flex;
+  flex-direction: column;
+  height: 100%;
+}
+.powerup-grid-row-container{
+  flex:4;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+
+
+.powerup-container{
+  flex:1;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+.powerup-desc{
+  margin-bottom:0px;
+  color:var(--dark-mode);
+  background-color: var(--gold);
+  border-radius: 20px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 8px 8px;
+  text-align: center;
+}
+
+.powerup-icon{
+  width:75px;
+}
+
+
+.money-container{
+  flex:1;
+}
+.error-money{
+  background-color: var(--error) !important;
+}
+.money{
+  color:var(--dark-mode);
+  background-color: var(--gold);
+  border-radius: 20px;
+  margin:10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 2px 5px;
+  width:25%;
+  text-align: center;
+  margin:auto;
+}
+
+
 .clock{
   position: absolute;
   top:0%;
@@ -473,6 +639,12 @@ button.submit.disabled:hover{
 .waiting{
   color:var(--gold);
   font-size: 3em;
+  display:inline-block;
+}
+.dot-flashing-container{
+  display: inline-block;
+  margin:20px;
+  vertical-align: middle;
 }
 .room-name-container{
   display: flex;
@@ -508,6 +680,62 @@ button.submit.disabled:hover{
   right:0;
   margin:auto;
 }
+
+
+/**
+ * ==============================================
+ * Dot Flashing
+ * ==============================================
+ */
+ .dot-flashing {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--gold);
+  color: var(--gold);
+  animation: dot-flashing 1s infinite linear alternate;
+  animation-delay: 0.5s;
+}
+.dot-flashing::before, .dot-flashing::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+}
+.dot-flashing::before {
+  left: -15px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--gold);
+  color: var(--gold);
+  animation: dot-flashing 1s infinite alternate;
+  animation-delay: 0s;
+}
+.dot-flashing::after {
+  left: 15px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--gold);
+  color:var(--gold);
+  animation: dot-flashing 1s infinite alternate;
+  animation-delay: 1s;
+}
+
+@keyframes dot-flashing {
+  0% {
+    background-color:var(--gold);
+  }
+  50%, 100% {
+    background-color: rgba(255, 208, 0, 0.2);
+  }
+}
+
+
+
+
 @keyframes spinner {
   0% {
     transform: rotate(0deg);
@@ -527,6 +755,7 @@ button.submit.disabled:hover{
   right:0;
   top:35%;
   margin:auto;
+  padding:0px;
   animation: spinner 1.5s linear infinite;
 }
 .leaderboard-finish-container{
@@ -694,3 +923,67 @@ button.submit.disabled:hover{
   animation-delay: -0.4s;
 }
 
+
+
+
+
+
+.learn-more-page{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 96.5vh;
+  background-color: var(--dark-mode);
+}
+
+
+.carousel {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  width: 80%;
+  aspect-ratio: 16/9;
+  position: relative;
+
+}
+.carousel-nav{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.carousel-nav > button{
+  background-color: transparent;
+  border: 0px;
+  text-decoration: none;
+  color:var(--gold);
+  cursor: pointer;
+}
+
+.carousel-item {
+  display: none;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  transition: opacity 0.3s;
+  aspect-ratio:16/9;
+}
+
+.carousel-item img {
+  width: 90%;
+  object-fit: cover;
+}
+
+.carousel-item.active {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid var(--gold);
+  box-sizing: border-box;
+  background-color: #252525;
+}
+
+.item-description{
+  width:90%;
+  text-align: center;
+}
