--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -256,6 +256,7 @@ button.room-item:hover{
   flex: 1;
   display:flex;
   height: 100%;
+  width:50%;
 }
 
 .submit{
@@ -453,6 +454,7 @@ button.submit.disabled:hover{
   flex: 1;
   display:flex;
   flex-direction: column;
+  width:100%;
 }
 .leaderboard{
   display:flex;
